[package]
name = "syrette_macros"
version = "0.4.1"
license = "MIT OR Apache-2.0"
authors = ["HampusM <hampus@hampusmat.com>"]
description = "Macros for Syrette, the convenient dependency injection framework"
repository = "https://git.hampusmat.com/syrette"
keywords = ["di", "dependency-injection", "ioc", "inversion-of-control"]
edition = "2021"

[lib]
proc_macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
factory = []
prevent-circular = []

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.40"
uuid = { version = "0.8", features = ["v4"] }
regex = "1.6.0"
once_cell = "1.13.1"
thiserror = "1.0.37"

[dev_dependencies]
syrette = { version = "0.4.1", path = "..", features = ["factory"] }
mockall = "0.11.1"
pretty_assertions = "1.3.0"
