[package]
name = "syrette_macros"
version = "0.4.2"
license = "MIT OR Apache-2.0"
authors = ["HampusM <hampus@hampusmat.com>"]
description = "Macros for Syrette, the convenient dependency injection framework"
repository = "https://git.hampusmat.com/syrette"
keywords = ["di", "dependency-injection", "ioc", "inversion-of-control"]
edition = "2021"

[lib]
proc_macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
factory = ["syrette/factory"]
prevent-circular = []
async = []

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.40"
uuid = { version = "0.8", features = ["v4"] }
regex = "1.6.0"
once_cell = "1.13.1"
thiserror = "1.0.37"
proc-macro-error = "1.0.4"

[dev_dependencies]
syrette = { version = "0.4.2", path = ".." }
mockall = "0.11.4"
pretty_assertions = "1.3.0"
syn = { version = "1.0.96", features = ["full", "extra-traits"] }
utility-macros = { git = "https://git.hampusmat.com/utility-macros" }

# The following is needed because of this change:
# https://github.com/assert-rs/predicates-rs/commit/7a961436d8c2b9cf09e9576a0c9341acb302f49c
#
# The predicates family of crates is a dependency of mockall.
#
# Follow this on
# https://github.com/asomers/mockall/issues/507
predicates-tree = "=1.0.7"
predicates-core = "=1.0.5"
