[package]
name = "syrette_macros"
version = "0.5.1"
license = "MIT OR Apache-2.0"
authors = ["HampusM <hampus@hampusmat.com>"]
description = "Macros for Syrette, the convenient dependency injection framework"
repository = "https://git.hampusmat.com/syrette"
keywords = ["di", "dependency-injection", "ioc", "inversion-of-control"]
edition = "2021"

[lib]
proc_macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--html-in-header", "docs-style.html"]

[features]
factory = ["syrette/factory"]
prevent-circular = []
async = ["syrette/async"]

[dependencies]
syn = { version = "1.0.96", features = ["full", "extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.40"
uuid = { version = "0.8", features = ["v4"] }
once_cell = "1.13.1"
thiserror = "1.0.37"
proc-macro-error = "1.0.4"

[target.'cfg(syrette_macros_logging)'.dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev_dependencies]
syrette = { version = "0.5.1", path = ".." }
mockall = "0.11.4"
pretty_assertions = "1.3.0"
syn = { version = "1.0.96", features = ["full", "extra-traits"] }
utility-macros = { git = "https://git.hampusmat.com/utility-macros" }

