[package]
name = "syrette"
version = "0.1.0"
license = "LGPL-2.1"
authors = ["HampusM <hampus@hampusmat.com>"]
description = "The convenient dependency injection library"
edition = "2021"

[dependencies]
syrette_macros = { path = "../syrette_macros" }
linkme = "0.3.0"
once_cell = "1.4"
error-stack = "0.1.1"

[dev_dependencies]
mockall = "0.11.1"

